[workspace]
members = ["cli", "client", "server"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/eoranged/lt"

[workspace.dependencies]
tokio = { version = "1.48", features = ["full"] }
anyhow = { version = "1.0", features = ["backtrace"] }
log = "0.4.28"
serde = { version = "1.0", features = ["derive"] }
socket2 = "0.6"

[profile.release]
opt-level = "s" # Maximum optimizations, slower compilation but faster runtime
debug = false # No debug info, smaller binary
lto = "fat" # Link Time Optimization for aggressive optimization
codegen-units = 1 # Single codegen unit for maximum optimization (can increase compile time)

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
