[package]
name = "localtunnel-server"
version = "0.1.6"
edition.workspace = true
description = "Server implementation of localtunnel."
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
actix-web = "4"
serde = { workspace = true }
hyper = { version = "1.8", features = ["full"] }
hyper-util = "0.1"
reqwest = { version = "0.12", features = [
    "json",
    "blocking",
    "native-tls",
] }
lazy_static = "1.5"
envy = "0.4"
dotenvy = "0.15"
thiserror = "2.0"
async-trait = "0.1"
regex = "1.12"
socket2 = { workspace = true }
clap = { version = "4.5", features = ["derive"], optional = true}
memory-stats = "1.2"
tikv-jemallocator = {workspace = true, optional = true}
rand = "0.8"


[features]
default = ["native-tls-vendored"]
clap = ["dep:clap"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
jemalloc = ["dep:tikv-jemallocator"]